EEC_InitBackup/src/objects/Household_Member__c.object
<CustomObject>
    <fields>
        <fullName>Age_At_Submission__c</fullName>
        <formula>FLOOR((IF(ISBLANK( Licensing_Transactions__r.Submission_Date__c ), TODAY(), Licensing_Transactions__r.Submission_Date__c) -  Date_of_Birth__c )/365.2425)</formula>
        <label>Age At Submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Licensor_Email__c</fullName>
        <description>Used in email templates</description>
        <formula>Licensing_Transactions__r.Assigned_To__r.Email</formula>
        <label>Assigned Licensor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Licensor_Name__c</fullName>
        <description>Used in template</description>
        <formula>Licensing_Transactions__r.Assigned_To__r.FirstName &amp; &quot; &quot; &amp;  Licensing_Transactions__r.Assigned_To__r.LastName</formula>
        <label>Assigned Licensor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Licensor_Phone__c</fullName>
        <formula>Licensing_Transactions__r.Assigned_To__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Licensor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_City_1__c</fullName>
        <label>BRC City 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_City_2__c</fullName>
        <label>BRC City 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_City_3__c</fullName>
        <label>BRC City 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Consent_Request_Date__c</fullName>
        <inlineHelpText>Date the BRC Consent was requested by email</inlineHelpText>
        <label>BRC Consent Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Consent_Signed_Date__c</fullName>
        <inlineHelpText>Date the BRC Consent was signed electronically.</inlineHelpText>
        <label>BRC Consent Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRC_Consent_Status__c</fullName>
        <inlineHelpText>Status of the electronic version of the document (DocuSign)</inlineHelpText>
        <label>BRC Consent Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BRC_Current_Mailing_Address__c</fullName>
        <label>BRC Current Mailing Address</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BRC_Date_From_1__c</fullName>
        <label>BRC Date From 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Date_From_2__c</fullName>
        <label>BRC Date From 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Date_From_3__c</fullName>
        <label>BRC Date From 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Date_To_1__c</fullName>
        <label>BRC Date To 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Date_To_2__c</fullName>
        <label>BRC Date To 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Date_To_3__c</fullName>
        <label>BRC Date To 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the BRC was received and result is OK.</inlineHelpText>
        <label>BRC Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRC_Father_First_Name__c</fullName>
        <label>BRC Father First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Father_Last_Name__c</fullName>
        <label>BRC Father Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Gender__c</fullName>
        <label>BRC Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BRC_Maiden_Name__c</fullName>
        <label>BRC Maiden Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Middle_Name__c</fullName>
        <label>BRC Middle Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Mother_First_Name__c</fullName>
        <label>BRC Mother First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Mother_Last_Name__c</fullName>
        <label>BRC Mother Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Mother_Maiden_Name__c</fullName>
        <label>BRC Mother Maiden Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Never_Had_SSN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BRC Never Had SSN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRC_Not_Renewal_Flag_For_DocuSign__c</fullName>
        <formula>IF( Licensing_Transactions__r.RecordType.Name = &quot;FCC Renewal&quot;, &quot;&quot;, &quot;X&quot;)</formula>
        <label>BRC Not Renewal Flag For DocuSign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Number_Street_1__c</fullName>
        <label>BRC Number Street 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Number_Street_2__c</fullName>
        <label>BRC Number Street 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Number_Street_3__c</fullName>
        <label>BRC Number Street 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Other_Addresses__c</fullName>
        <label>BRC Other Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Place_of_Birth__c</fullName>
        <label>BRC Place of Birth</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Renewal_Flag_For_DocuSign__c</fullName>
        <formula>IF(  Licensing_Transactions__r.RecordType.Name = &quot;FCC Renewal&quot;, &quot;X&quot;, &quot;&quot;)</formula>
        <label>BRC Renewal Flag For DocuSign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Renewal__c</fullName>
        <label>BRC Renewal</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Licensing Transaction = Upgrade / Change of Address / Change of Household members and  Age at submission &gt;= 15 Then check the previous transaction (based on submission date)  on this provider among FCC New License / FCC Renewal / FCC License Upgrade / Change of Address / FCC Change of Household then check on that transaction if a household member exists with same first name / last name / birth date. If yes and BRC Required of that record = TRUE, then set  flag to FALSE else set flag to TRUE</description>
        <inlineHelpText>Is checked if a BRC was required at submission for this household member.</inlineHelpText>
        <label>BRC Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRC_SSN_Last_Six_Digits_2__c</fullName>
        <label>BRC SSN Last Six Digits (2)</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_SSN_Last_Six_Digits_4__c</fullName>
        <label>BRC SSN Last Six Digits (4)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_State_1__c</fullName>
        <label>BRC State 1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_State_2__c</fullName>
        <label>BRC State 2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_State_3__c</fullName>
        <label>BRC State 3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Suffix__c</fullName>
        <label>BRC Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Zip_1__c</fullName>
        <label>BRC Zip 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Zip_2__c</fullName>
        <label>BRC Zip 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Zip_3__c</fullName>
        <label>BRC Zip 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CORI_Reception_Date__c</fullName>
        <label>CORI Reception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CORI_Result__c</fullName>
        <label>CORI Result</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved after discretionary review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_School_Grade__c</fullName>
        <label>Current School Grade</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCF_Reception_Date__c</fullName>
        <label>DCF Reception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DCF_Result__c</fullName>
        <label>DCF Result</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved after discretionary review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <inlineHelpText>Email address will be used in order to send BRC authorization eletronically.</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Ind_On_Premise__c</fullName>
        <label>BRC Household / Ind On Premise</label>
        <picklist>
            <picklistValues>
                <fullName>Household Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual on Premise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensing_Transactions__c</fullName>
        <label>Licensing Transactions</label>
        <referenceTo>Licensing_Transaction__c</referenceTo>
        <relationshipLabel>Household Members and Regular Persons on Premise</relationshipLabel>
        <relationshipName>Household_Member</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_Hours_Home_During_Child_Care__c</fullName>
        <label>Number of Hours Home During Child Care</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Email_Address__c</fullName>
        <label>Provider Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Provider_Full_Address__c</fullName>
        <formula>Licensing_Transactions__r.Provider__r.Provider_Full_Address__c</formula>
        <label>Provider Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <formula>Licensing_Transactions__r.Provider__r.Name</formula>
        <label>Provider Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Members and Regular Persons on Premise</relationshipLabel>
        <relationshipName>Household_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Provider__c</fullName>
        <label>Relationship to Provider</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Household Member</label>
    <nameField>
        <displayFormat>HM-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Household Member</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CORI_Result_requires_a_date</fullName>
        <active>true</active>
        <description>If CORI Result = True, then the Date = NOT NULL</description>
        <errorConditionFormula>OR(
ISPICKVAL(CORI_Result__c , &quot;Approved&quot;), 
ISPICKVAL(CORI_Result__c , &quot;Approved after discretionary review&quot;),
ISPICKVAL(CORI_Result__c , &quot;Denied&quot;)
)
&amp;&amp;
ISBLANK(CORI_Reception_Date__c )</errorConditionFormula>
        <errorDisplayField>CORI_Reception_Date__c</errorDisplayField>
        <errorMessage>If CORI Result has been selected, Reception Date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CORI_Status_Not_Null_If_Date_Filled</fullName>
        <active>true</active>
        <errorConditionFormula>AND (NOT(ISBLANK( CORI_Reception_Date__c )) , ISPICKVAL( CORI_Result__c, &apos;&apos; ))</errorConditionFormula>
        <errorDisplayField>CORI_Result__c</errorDisplayField>
        <errorMessage>Result must be selected if date is not empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DCF_Result_requires_a_date</fullName>
        <active>true</active>
        <description>If DCF Result = True, then the Date = NOT NULL</description>
        <errorConditionFormula>OR(
ISPICKVAL(DCF_Result__c , &quot;Approved&quot;), 
ISPICKVAL(DCF_Result__c, &quot;Approved after discretionary review&quot;),
ISPICKVAL(DCF_Result__c, &quot;Denied&quot;)
)
&amp;&amp;
ISBLANK(DCF_Reception_Date__c )</errorConditionFormula>
        <errorDisplayField>DCF_Reception_Date__c</errorDisplayField>
        <errorMessage>If DCF Result has been selected, Reception Date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DCF_Status_Not_Null_If_Date_Filled</fullName>
        <active>true</active>
        <errorConditionFormula>AND (NOT(ISBLANK( DCF_Reception_Date__c )) , ISPICKVAL( DCF_Result__c, &apos;&apos; ))</errorConditionFormula>
        <errorDisplayField>DCF_Result__c</errorDisplayField>
        <errorMessage>Result must be selected if date is not empty.</errorMessage>
    </validationRules>
</CustomObject>